Much better but not yet done